2005-06-02  Christopher Faylor  <cgf@timesys.com>

	* dlfcn.cc (get_full_path_of_dll): Use a relative path when converting
	so that the standard Windows rules for finding a library will be used
	if no path is given.  Stop explicitly searching /usr/bin since that is
	now in effect.

2005-06-01  Christopher Faylor  <cgf@timesys.com>

	Revert 2005-05-30 close_all_files changes.
	* spawn.cc (spawn_guts): When execing, close all files after the child
	has synced with us.

2005-06-01  Christopher Faylor  <cgf@timesys.com>

	* fhandler_disk_file.cc (fhandler_disk_file::fchown): Make sure that
	disk open is called in case we're passed in a non-existent device.

2005-06-01  Christopher Faylor  <cgf@timesys.com>

	* include/machine/stdlib.h: New file.

2005-06-01  Christopher Faylor  <cgf@timesys.com>

	* thread.h (List_remove): Revert most of 2005-05-30 change.

2005-06-01  Christopher Faylor  <cgf@timesys.com>

	* cygwin.sc: Don't output .reloc or .rsrc sections.  Clean up stuff
	around .cygheap and use a workaround to get things working with newer
	(broken?) binutils.

2005-05-31  Christopher Faylor  <cgf@timesys.com>

	* cygheap.cc (cygheap_end): Remove bogus section attribute.
	* cygwin.sc: Make __cygheap_mid absolute.  Remove unused _cygheap_foo.

2005-05-30  Christopher Faylor  <cgf@timesys.com>

	* child_info.h (child_info::cygheap_h): Delete.
	(child_info::dwProcessId): New field.
	* cygheap.cc (init_cheap): Delete.
	(dup_now): Ditto.
	(cygheap_setup_for_child): Ditto.
	(cygheap_setup_for_child_cleanup): Ditto.
	(cygheap_fixup_in_child): Simplify.  Use new "child_copy" function to
	copy heap from parent.
	(_csbrk): Don't attempt allocation if within cygheap section.  Fix so
	that more than one allocation will succeed.
	(cygheap_init): Reset possibly-nonzero region to zero.
	* cygheap.h (cygheap_setup_for_child): Delete declaration.
	(cygheap_setup_for_child_cleanup): Ditto.
	(cygheap_start): Define as an array.